fixed metrics spacing

--- a/src/components/history-accordion/index.styl
+++ b/src/components/history-accordion/index.styl
@@ -72,7 +72,7 @@
         flex-direction column
       &-status
         text-align center
-        min-width 72px
+        min-width 68px
         margin-right 38px
         margin-left 50px
         opacity .7
